emepezamos el unidad 4 de Merge , exportamos las tablas con las que trabajaremos

--- a/pandas_dtascience/4_Merge/Merge.ipynb
+++ b/pandas_dtascience/4_Merge/Merge.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "08db7d9f-a6b2-4a17-85eb-c1311f557802",
    "metadata": {},
    "outputs": [],
@@ -36,11 +36,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c68d5d5a-9c66-49cd-b1cb-b150306d98ee",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "id",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "paciente",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "doctor",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "a3b958c3-7e1d-49f5-bb25-5b498d131127",
+       "rows": [
+        [
+         "1",
+         "Carla Medina Huerta",
+         "1.0"
+        ],
+        [
+         "2",
+         "Francisco Saucedo Rojo",
+         "2.0"
+        ],
+        [
+         "3",
+         "Amelia Verduzco Ondarza",
+         "1.0"
+        ],
+        [
+         "4",
+         "Eva Guevara Escobedo",
+         "1.0"
+        ],
+        [
+         "5",
+         "Moises Peñalosa Barajas",
+         "4.0"
+        ],
+        [
+         "6",
+         "Ismael Orozco Mejía",
+         null
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 6
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>paciente</th>\n",
+       "      <th>doctor</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Carla Medina Huerta</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Francisco Saucedo Rojo</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Amelia Verduzco Ondarza</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Eva Guevara Escobedo</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Moises Peñalosa Barajas</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Ismael Orozco Mejía</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   paciente  doctor\n",
+       "id                                 \n",
+       "1       Carla Medina Huerta     1.0\n",
+       "2    Francisco Saucedo Rojo     2.0\n",
+       "3   Amelia Verduzco Ondarza     1.0\n",
+       "4      Eva Guevara Escobedo     1.0\n",
+       "5   Moises Peñalosa Barajas     4.0\n",
+       "6       Ismael Orozco Mejía     NaN"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "consultas = pd.read_excel(\"./merge.xlsx\",index_col=\"id\")\n",
+    "consultas"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -60,11 +200,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "79981cf4-2dc6-4161-8574-61ca207f7fe0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "id",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "doctor",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "id_especialidad",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "consultorio",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "04c0ff18-522c-4927-a74d-325e28e996a8",
+       "rows": [
+        [
+         "1",
+         "Camilo Iglesias Lima",
+         "2",
+         "101"
+        ],
+        [
+         "2",
+         "Claudio Gamba Cisneros",
+         "1",
+         "102"
+        ],
+        [
+         "3",
+         "Anibal Prado Mendoza",
+         "1",
+         "102"
+        ],
+        [
+         "4",
+         "Rocío Pastor Pineda",
+         "3",
+         "101"
+        ],
+        [
+         "5",
+         "Kevin Pastor Mora",
+         "1",
+         "103"
+        ]
+       ],
+       "shape": {
+        "columns": 3,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>doctor</th>\n",
+       "      <th>id_especialidad</th>\n",
+       "      <th>consultorio</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Camilo Iglesias Lima</td>\n",
+       "      <td>2</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Claudio Gamba Cisneros</td>\n",
+       "      <td>1</td>\n",
+       "      <td>102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Anibal Prado Mendoza</td>\n",
+       "      <td>1</td>\n",
+       "      <td>102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Rocío Pastor Pineda</td>\n",
+       "      <td>3</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Kevin Pastor Mora</td>\n",
+       "      <td>1</td>\n",
+       "      <td>103</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    doctor  id_especialidad  consultorio\n",
+       "id                                                      \n",
+       "1     Camilo Iglesias Lima                2          101\n",
+       "2   Claudio Gamba Cisneros                1          102\n",
+       "3     Anibal Prado Mendoza                1          102\n",
+       "4      Rocío Pastor Pineda                3          101\n",
+       "5        Kevin Pastor Mora                1          103"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doctores = pd.read_excel(\"./merge.xlsx\",sheet_name=\"doctor\",index_col=\"id\")\n",
+    "doctores"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -84,11 +370,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e9e8c0fb-2687-4c02-9886-eb4f710bfbfd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "id_especialidad",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "nombre",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "descripcion",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "5cec6604-6a78-4835-9970-02b9544397cd",
+       "rows": [
+        [
+         "1",
+         "Anestesiología",
+         " La anestesiología es la rama médica que se encarga de estudiar, practicar y aplicar la anestesia a los pacientes que la necesitan."
+        ],
+        [
+         "2",
+         "Cardiología",
+         "La cardiología es la rama de la medicina que se encarga del estudio, diagnóstico y tratamiento de las enfermedades del corazón y del sistema circulatorio."
+        ],
+        [
+         "3",
+         "Gastroenterología",
+         "La gastroenterología es la especialidad médica que se ocupa de las enfermedades del aparato digestivo y órganos asociados"
+        ],
+        [
+         "4",
+         "Hematología",
+         "La hematología ​ es la especialidad médica que se dedica al tratamiento de los pacientes con enfermedades de la sangre o hematológicas,"
+        ],
+        [
+         "5",
+         "Cirugía Plástica",
+         "Atiende y trata en forma médico-quirúrgica todo proceso que requiera reparación o reposición de estructuras que afectan a la forma y función corporal"
+        ],
+        [
+         "6",
+         "Dermatología",
+         "La dermatología es una especialidad clínico-quirúrgica que estudia y trata el órgano cutáneo"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 6
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nombre</th>\n",
+       "      <th>descripcion</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id_especialidad</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Anestesiología</td>\n",
+       "      <td>La anestesiología es la rama médica que se en...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Cardiología</td>\n",
+       "      <td>La cardiología es la rama de la medicina que s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Gastroenterología</td>\n",
+       "      <td>La gastroenterología es la especialidad médica...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Hematología</td>\n",
+       "      <td>La hematología ​ es la especialidad médica que...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Cirugía Plástica</td>\n",
+       "      <td>Atiende y trata en forma médico-quirúrgica tod...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Dermatología</td>\n",
+       "      <td>La dermatología es una especialidad clínico-qu...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            nombre  \\\n",
+       "id_especialidad                      \n",
+       "1                   Anestesiología   \n",
+       "2                      Cardiología   \n",
+       "3                Gastroenterología   \n",
+       "4                      Hematología   \n",
+       "5                 Cirugía Plástica   \n",
+       "6                     Dermatología   \n",
+       "\n",
+       "                                                       descripcion  \n",
+       "id_especialidad                                                     \n",
+       "1                 La anestesiología es la rama médica que se en...  \n",
+       "2                La cardiología es la rama de la medicina que s...  \n",
+       "3                La gastroenterología es la especialidad médica...  \n",
+       "4                La hematología ​ es la especialidad médica que...  \n",
+       "5                Atiende y trata en forma médico-quirúrgica tod...  \n",
+       "6                La dermatología es una especialidad clínico-qu...  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "especialidades = pd.read_excel(\"./merge.xlsx\",sheet_name=\"especialidades\",header=3,usecols=\"B:D\",index_col=\"id_especialidad\")\n",
+    "especialidades"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -500,7 +935,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -514,7 +949,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
